--- a/pages/autoridades.html
+++ b/pages/autoridades.html
@@ -133,38 +133,44 @@
 
         </section>
     </main>
-    <section class="footer">
-        <footer class="bg-white text-center text-lg-start text-white">
-            <div class="container p-3">
-                <div class="row my-4">
-                    <div class="text-black col-lg-3 col-md-6 mb-4 mb-md-0">
-                        <div class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto"
-                            style="width: 150px; height: 150px;">
-                            <img src="../assets/images/logo-hogwarts.webp" height="170" alt="Logo del Colegio Hogwarts"
-                                loading="lazy" />
-                        </div>
-                        <h4 class="text-center">Colegio Hogwarts</h4>
-                        <h5 class="text-center">de Magia y Hechiceria</h5>
-                        <h6 class="text-center">Draco Dormiens Nunquam Titillandus</h6>
-                    </div>
-                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0 align-items-end justify-content-end mb-4 mx-auto">
-                        <h5 class="text-uppercase mb-4 text-black text-end">Nuestro himno</h5>
-                        <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/QrTrmnpTNwY?si=wcM60BfQOutrhSq8"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen></iframe>
-                    </div>
-                </div>
-            </div>
-            <!------- Script bootstrap ------->
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-                crossorigin="anonymous"></script>
-            <!------- Script wow.js ------->
-            <script src="../js/wow.min.js"></script>
-            <script>
-                new WOW().init();
+  <!------- Seccion footer ------->
+  <footer class=" bg-white text-center text-lg-start text-white">
+    <div class="container p-3">
+      <div class="row my-4">
+        <div class="text-black col-lg-3 col-md-6 mb-4 mb-md-0">
+          <div
+            class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto"
+            style="width: 150px; height: 150px;">
+            <img src="../assets/images/logo-hogwarts.webp" height="170" alt="Logo del Colegio Hogwarts" loading="lazy" />
+          </div>
+          <h4 class="text-center">Colegio Hogwarts</h4>
+          <h5 class="text-center">de Magia y Hechiceria</h5>
+          <h6 class="text-center">Draco Dormiens Nunquam Titillandus</h6>
+        </div>
+        <div class="col-lg-3 col-md-6 mb-4 mb-md-0 align-items-end justify-content-end mb-4 mx-auto">
+          <h5 class="text-uppercase mb-4 text-black text-end">Nuestro himno</h5>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/QrTrmnpTNwY?si=wcM60BfQOutrhSq8"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+    <div class="text-center p-3 text-black" style="background-color: rgba(0, 0, 0, 0.2)">
+      © AÑO 990. Todos los derechos reservados al Ministerio de Mágia. Ubicado en Londres, Inglaterra.
+    </div>
+  </footer>
+<!------- Script bootstrap ------->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+  crossorigin="anonymous"></script>
+<!------- Script wow.js ------->
+<script src="js/wow.min.js"></script>
+<script>
+  new WOW().init();
+</script>
+</body>
+).init();
             </script>
 </body>
 
