Responsive en toda la pagina a 320px

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0 align-items-end justify-content-end mb-4 mx-auto">
             <h5 class="text-uppercase mb-4 text-black text-end">Nuestro himno</h5>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/QrTrmnpTNwY?si=wcM60BfQOutrhSq8"
+            <iframe  height="315" src="https://www.youtube.com/embed/QrTrmnpTNwY?si=wcM60BfQOutrhSq8"
               title="YouTube video player" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen></iframe>
