--- a/pages/materias.html
+++ b/pages/materias.html
@@ -38,7 +38,7 @@
 </head>
 
 <body>
-  <header class="navegacion">
+  <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary background-color: #e3f2fd fixed-top">
       <div class="container-fluid">
         <img src="../assets/images/logo-hogwarts.webp" alt="Logo de Hogwarts" width="90" height="auto"
@@ -51,7 +51,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="colegio.html">Colegio</a>
@@ -60,7 +60,7 @@
               <a class="nav-link" href="autoridades.html">Autoridades</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="materias.html">Asignaturas</a>
+              <a class="nav-link" href="materias.html">Asignaturas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="inscripciones.html">Inscripciones</a>
@@ -165,10 +165,10 @@
         </div>
         <div class="col-lg-3 col-md-6 mb-4 mb-md-0 align-items-end justify-content-end mb-4 mx-auto">
           <h5 class="text-uppercase mb-4 text-black text-end">Nuestro himno</h5>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/QrTrmnpTNwY?si=wcM60BfQOutrhSq8"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
+          <iframe  height="315" src="https://www.youtube.com/embed/QrTrmnpTNwY?si=wcM60BfQOutrhSq8"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
         </div>
       </div>
     </div>
